--- a/prefazione.tex
+++ b/prefazione.tex
@@ -12,7 +12,7 @@ Il web è in continua evoluzione. Un sito web sviluppato oggi in poco tempo divi
 
 \textit{``Il grado in cui un prodotto può essere usato da particolari utenti per raggiungere certi obiettivi con efficacia, efficienza, soddisfazione in uno specifico contesto d’uso''}\footnote{Definizione secondo ISO 9241-11:1998}
 
-\end{center} 
+\end{center}
 
 Il contesto d'uso della presente relazione è chiaramente il web. Diamo ora per correttezza una definizione formale di alcuni termini:
 
@@ -40,7 +40,7 @@ A mio modo di vedere qualsiasi web designer, front-end developer o progettista d
 Dall'altro lato per poter progettare bene è necessario saper in primo luogo \textbf{analizzare}. Ispezionando le diverse pagine web che incontriamo ogni giorno e giudicarle con spirito critico ci porta ad accumulare esperienza, a farci un'idea di \textit{cosa è giusto} e \textit{cosa è sbagliato}. Chiaramente la materia è opinabile, non esiste uno standard di usabilità, esso evolve in continuazione e ciò che vale oggi non necessariamente è valido anche domani. Un buon sviluppatore web non dovrebbe dunque mai fermarsi, analizzare continuamente, tenersi aggiornato coi tempi. Sapersi rinnovare è una corda di sicurezza, senza la quale nel mondo dello sviluppo web si rischia di cadere.
 \linebreak
 \linebreak
-Questo documento non vuol essere una guida all'usabilità ma un'analisi concreta di usabilità. Risulta allo stesso tempo necessario però definire alcuni concetti fondamentali prima di procedere nell'analisi. Questo è sostanzialmente la ragione per la quale ho scritto questa prefazione. Nei prossimi capitoli che seguiranno analizzerò il sito in questione con spirito critico, senza alcun pregiudizio e con la massima obbiettività. Il \textbf{capitolo 1} si occuperà di definire il sito in questione, studiare la sua storia, la sua struttura e soprattutto il suo scopo. Il \textbf{capitolo 2} inizia con l'analisi delle \textbf{sei W}: \textit{Where}, \textit{Who}, \textit{Why}, \textit{What}, \textit{When}, \textit{How}. Il \textbf{capitolo 3} affronta il problema del tempo e dei timer. Il \textbf{capitolo 4} analizza il contenuto di una pagina interna e come essa si presenta. Il \textbf{capitolo 5} affronta il problema della pubblicità e della sua gestione lungo l'intera navigazione. Il \textbf{capitolo 6} affronta il problema della ricerca interna al sito. Il \textbf{capitolo 7} fornisce infine una valutazione complessiva del sito, indicando gli aspetti positivi e negativi e, laddove opportuno, fornendo una possibile soluzione ai problemi. 
+Questo documento non vuol essere una guida all'usabilità ma un'analisi concreta di usabilità. Risulta allo stesso tempo necessario però definire alcuni concetti fondamentali prima di procedere nell'analisi. Questo è sostanzialmente la ragione per la quale ho scritto questa prefazione. Nei prossimi capitoli che seguiranno analizzerò il sito in questione con spirito critico, senza alcun pregiudizio e con la massima obbiettività. Il \textbf{capitolo 1} si occuperà di definire il sito in questione, studiare la sua storia, la sua struttura e soprattutto il suo scopo. Il \textbf{capitolo 2} inizia con l'analisi delle \textbf{sei W}: \textit{Where}, \textit{Who}, \textit{Why}, \textit{What}, \textit{When}, \textit{How}. Il \textbf{capitolo 3} analizza il contenuto di una pagina interna e come essa si presenta. Il \textbf{capitolo 4} affronta il problema della pubblicità e della sua gestione lungo l'intera navigazione. Il \textbf{capitolo 5} affronta il problema della ricerca interna al sito. Il \textbf{capitolo 6} fornisce infine una valutazione complessiva del sito, indicando gli aspetti positivi e negativi e, laddove opportuno, fornendo una possibile soluzione ai problemi.
 
 \subsection*{Note sulla licenza}
 
