--- a/valutazione.tex
+++ b/valutazione.tex
@@ -1,1 +1,48 @@
 \section{Valutazioni e considerazioni finali}
+
+È giunta l'ora di trarre un verdetto dall'analisi effettuata. Per far ciò ho riportato tutti gli aspetti analizzati in una tabella e associato a ciascuno di essi un punteggio da 1 a 10, la cui media produrrà la valutazione finale.
+
+
+
+\begin{longtable}{| p{4.5cm} | p{4.5cm} | l |}
+
+\hline
+\hline
+\textbf{Aspetto} & \textbf{Descrizione} & \textbf{Valutazione} \\
+\hline
+\hline
+
+Struttura generale del sito & Il sito si presenta ben strutturato e gli ar gomenti sono categorizzati in modo molto intuitivo & 8 \\
+\hline
+Where? & La home page riesce a rispondere a questa domanda in tempi discreti & 7 \\
+\hline
+Who? & A questa domanda si riesce a rispondere solo attraverso l'intuizione o soffermandosi a lungo nel sito & 5.5 \\
+\hline
+Why? & Il sito non presenta in modo chiaro ed evidente nella sua home di cosa si occupa e non dà una motivazione sufficiente all'utente per scegliere esso piuttosto che altri suoi simili & 5 \\
+\hline
+What? & I contenuti sono presentati molto bene e scrollando sulla home arriviamo ad una bella interfaccia che presenta i contenuti in modo chiaro, sebbene abbia alcuni difetti & 8 \\
+\hline
+When? & Il sito è in continuo aggiornamento e dà quindi la sensazione di affidabilità & 8 \\
+\hline
+How? & Il menu di navigazione a tendina è rapido e immediato anche se esso si mescola con il layout ed è poco visibile & 6 \\
+\hline
+Struttura di una guida & Ogni guida o articolo è suddiviso in una serie di brevi lezioni. Quest'aspetto è molto positivo per l'utente & 8 \\
+\hline
+Barra laterale & La barra laterale mostra link rapidi ad articoli correlati, agli ultimi articoli pubblicati e a quelli più popolari. Buona da un lato ma un po' ingombrante & 6 \\
+\hline
+Testo & Il testo è molto leggibile ma il contenuto si mescola leggermente con il layout & 7 \\
+\hline
+Immagini & Le immagini si intersecano bene con il testo e sono un valore aggiunto & 8 \\
+\hline
+Link & I link sono validi ma i link già visitati non cambiano colore & 6 \\
+\hline
+Pubblicità & La pubblcità è gestita in modo pessimo ed è molto fastidiosa per l'utente & 3 \\
+\hline
+Ricerca & La ricerca è efficace, anche se può essere migliorata & 7 \\
+\hline
+\hline
+Totale & & 6,60 \\
+\hline
+\hline
+
+\end{longtable}
